[fix] unexpected flicker issue 1. add `backface-visibility` and `perspective` properties

--- a/src/css/components/carousel/_carousel.scss
+++ b/src/css/components/carousel/_carousel.scss
@@ -7,9 +7,12 @@
 
     /* Enable Hardware Acceleration
      *
-     * Using `translate3d` pushes CSS animations into hardware acceleration.
+     * Using `translate3d` pushes CSS animations into hardware acceleration
+     * And fix unexpected flicker issue by using `backface-visibility` and `perspective`.
      */
     transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+	  perspective: 1000;
     transition: transform .5s ease;
     width: 100%;
 
